--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover">
 		<meta name="description" content="Goku - Desenvolvimento de game 3D no navegador">
-		<link rel="manifest" href="/manifest.json">
+		<link rel="manifest" href="./manifest.json">
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
-		<link rel="apple-touch-icon" href="/img/192x192.png">
-		<link rel="preload" as="style" href="/stylesheet.css" onload="this.rel='stylesheet'">
-		<meta property="og:url" content="https://astro.elfolz.app.br" />
+		<link rel="preload" as="style" href="./stylesheet.css" onload="this.rel='stylesheet'">
+		<meta property="og:url" content=https://elfolz.github.io/goku" />
 		<meta property="og:title" content="Goku">
-		<meta property="og:image" content="https://astro.elfolz.app.br/img/promo.jpg">
+		<meta property="og:image" content="https://elfolz.github.io/goku/img/promo.jpg">
 		<meta property="og:image:type" content="image/jpg" />
 		<meta property="og:image:width" content="512" />
 		<meta property="og:image:height" content="512" />
@@ -69,7 +68,7 @@
 	<body>
 		<figure>
 			<span>
-				<img src="/img/512x512.webp" alt="Goku">
+				<img src="./img/512x512.webp" alt="Goku">
 			</span>
 			<progress value="0" max="100"></progress>
 		</figure>
@@ -78,6 +77,6 @@
 				<svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 0 24 24" width="48px" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></svg>
 			</button>
 		</footer>
-		<script src="/js/main.js" type="module"></script>
+		<script src="./js/main.js" type="module"></script>
 	</body>
 </html>
