--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover">
 		<meta name="description" content="Goku - Desenvolvimento de game 3D no navegador">
 		<link rel="manifest" href="./manifest.json">
-		<link rel="icon" type="image/x-icon" href="/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<link rel="preload" as="style" href="./stylesheet.css" onload="this.rel='stylesheet'">
 		<meta property="og:url" content=https://elfolz.github.io/goku" />
 		<meta property="og:title" content="Goku">
